--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en" onclick="jump()">
 <head>
     <meta charset="UTF-8">
-    <title>Game</title>
+    <title>
+        Game
+    </title>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Instructions: Click to jump over to avoid hitting the moving block. Click on refresh button on the address bar to restart the game.
+    <p class="tips">
+        <span class="tips-title">Tips from MH</span> : Click to jump over to avoid hitting the moving block. Click on <span class="tips-refresh">Refresh</span> button on the address bar to restart the game.
+    </p>
     <div id="game">
         <div id="character"></div>
         <div id="block"></div>
