--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
   <title>Paper, Scissors, Stone</title>
 </head>
 <body>
-    <div class="container-3">
-    <h2 style="font-size: 20px">Paper, Scissors, Stone</h2>
+  <div class="container-1">
+    <h2 style="font-size: 20px">Paper, Scissors, Stone (manufactured by MSoft)</h2>
     <div class="flex-box-rps" id="flex-box-rps-div">
       <img id="paper" src="static\images\Paper.jpg" height=100 width=100 alt="" onclick="rpsGame(this)">
       <img id="scissors" src="static\images\Scissors.jpg" height=100 width=100 alt="" onclick="rpsGame(this)">
       <img id="stone" src="static\images\Stone.jpg" height=100 width=100 alt="" onclick="rpsGame(this)">
     </div>
+
+    <div class="flex-box-2" id="flex-box2div">
+    </div>
   </div>
+
 
   <script src="static/js/script.js"></script>
 </body>
