--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container-1">
-    <h2 style="font-size: 20px">Paper, Scissors, Stone (manufactured by MSoft)</h2>
+    <h2 style="font-size: 18px">Paper, Scissors, Stone (by MSoft)</h2>
     <div class="flex-box-rps" id="flex-box-rps-div">
       <img id="paper" src="static\images\Paper.jpg" height=100 width=100 alt="" onclick="rpsGame(this)">
       <img id="scissors" src="static\images\Scissors.jpg" height=100 width=100 alt="" onclick="rpsGame(this)">
